updated pom.xml with format depe